--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
-    "next": "14.2.16",
+    "next": "^15.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.14.0",
